--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
-    <!-- bootstrap   -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- fontawesome  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Text-tools for formatting text and make perfect ms word paragraph. Text-tools is used to remove extra spaces from paragraph and remove extra new lines from paragraph. Text-tools can convert first letter of paragraph to uppercase and put the semicolon at the end of paragraph. lowercase to uppercase converter or Uppercase to lowercase converter or remove extra spaces. remove extra lines from paragraph. how to remove extra spaces from paragraph? how to capitalize letter in paragraph? count words in a paragraph. count total characters in a paragraph? 
+reduce word count online free, pdf word counter online, word frequency counter online, hindi word counter, word count in word, typing word counter, word counter google docs, word online, letter counter without spaces, letter counter online, letter counter with spaces, specific letter counter, letter counter and sorter, letter counter game, character count word, random letter counter, character count, character frequency counter, word counter, character count online, character count with spaces, letter counter without spaces, alphabet letter counter, character count excel, " />
 
-    <title>First React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <meta name="keywords"
+    content=" 
+    word counter online, word counter google docs, word count in word, typing word counter, chinese word counter, korean word counter, word counter jpg, word counter google docs, word online, word count in word, word cloud, character counter, word counter for handwriting, microsoft word, word document, word counter no limit uppercase to lowercase, lowercase to uppercase, text-transform uppercase, lowercase, text capitalize to uppercase, remove extra spaces from paragraph, make a perfect paragraph lowercase to uppercase converter remove extra spaces from paragraph , word counter in paragraph, characters counter from paragraph, how to count words in a paragraph, how to count characters from paragraph, how to make all letters capitalize, how to make all letter lowercase, how to make all letter uppercase in a paragraph">
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <!-- bootstrap   -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!-- fontawesome  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <title>First React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
